--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,20 +27,20 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/pages/form/page.ts",
-    "app/pages/hur-vi-gor/page.js",
+    "app/pages/omoss/page.js",
     "app/layout.jsx",
     "app/page.js",
-    "components/EmailBtn.js",
-    "components/Navbar.jsxx",
-    "components/Hero.js",
-    "components/Features.js",
-    "components/Camp.js",
-    "components/Footer.js",
-    "components/Guide.js",
-    "components/GetApp.js",
-    "components/Guide2.js",
+    "app/components/EmailBtn.js",
+    "app/components/Navbar.jsxx",
+    "app/components/Hero.js",
+    "app/components/Features.js",
+    "app/components/Camp.js",
+    "app/components/Footer.js",
+    "app/components/Guide.js",
+    "app/components/GetApp.js",
+    "app/components/Guide2.js",
     "app/pages/form/page.js",
-    "constants/index.js"
+    "app/constants/index.js"
   ],
   "exclude": ["node_modules"]
 }
