--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -22,9 +18,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "target": "ES2017"
   },
@@ -33,8 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/pages/form/page.ts",
-    "app/pages/omoss/page.js",
+    "app/form/page.ts",
+    "app/omoss/page.js",
     "app/layout.jsx",
     "app/page.js",
     "app/components/EmailBtn.js",
@@ -46,10 +40,8 @@
     "app/components/Guide.js",
     "app/components/GetApp.js",
     "app/components/Guide2.js",
-    "app/pages/form/page.js",
+    "app/form/page.js",
     "app/constants/index.js"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
