--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.21.2",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^12.9.2",
+    "lucide-react": "^0.511.0",
     "next": "^15.1.4",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
