--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
